<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content" >

    <Preference android:layout="@layout/action_bar_filler" />

    <PreferenceCategory
        android:layout_width="fill_parent"
        android:key="settings_ui"
        android:title="@string/pref_title_ui" >
        <ListPreference
            android:defaultValue="@string/pref_shelf_style_default"
            android:dialogTitle="@string/pref_shelf_style_title"
            android:entries="@array/pref_shelf_style_entries"
            android:entryValues="@array/pref_shelf_style_values"
            android:key="shelfstyle"
            android:summary="@string/pref_shelf_style_desc"
            android:title="@string/pref_shelf_style_title" />
    </PreferenceCategory>
    <PreferenceCategory
        android:layout_width="fill_parent"
        android:key="settings_app_data"
        android:title="@string/pref_title_app_data" >
        <Preference 
            android:key="delete_notebooks"
            android:summary="@string/pref_delete_notebooks_desc"
            android:title="@string/pref_delete_notebooks_title" />
        <Preference 
            android:key="delete_notebook_content"
            android:summary="@string/pref_delete_notebook_content_desc"
            android:title="@string/pref_delete_notebook_content_title" />
        <Preference 
            android:key="backup_notebooks"
            android:summary="@string/pref_backup_notebooks_desc"
            android:title="@string/pref_backup_notebooks_title" />
        <Preference 
            android:key="restore_notebooks"
            android:summary="@string/pref_restore_notebooks_desc"
            android:title="@string/pref_restore_notebooks_title" />
        <Preference 
            android:key="delete_backups"
            android:summary="@string/pref_delete_backups_desc"
            android:title="@string/pref_delete_backups_title" />
        
    </PreferenceCategory>

</PreferenceScreen>